[fix] fix coupon order [fix] fix bougth detail

--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
@@ -27,8 +27,9 @@
             </span>
           </p>
 
-          <button class="btn btn-danger btn-retry mr-2" (click)="retry()"><i class="fas fa-arrow-circle-left"></i> I miei acquisti</button>
-          <button *ngIf="!couponPass.token.verifier && isValid(couponPass)" class="btn btn-success btn-retry" (click)="openModal(qrModal)">Ottieni codice</button>
+          <button *ngIf="couponPass.state" class="btn btn-danger btn-retry mr-2" (click)="retry()"><i class="fas fa-arrow-circle-left"></i> I miei acquisti</button>
+          <button *ngIf="!couponPass.state" class="btn btn-danger btn-retry mr-2" (click)="retryOrder()"><i class="fas fa-arrow-circle-left"></i> I miei ordini</button>
+          <button *ngIf="!couponPass.token.verifier && isValid(couponPass) && couponPass.state" class="btn btn-success btn-retry" (click)="openModal(qrModal)">Ottieni codice</button>
           <button *ngIf="couponPass.token.verifier || !isValid(couponPass)" class="btn btn-warning btn-retry">Non più valido</button>
         </div>
 
