--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
@@ -26,11 +26,29 @@
                     couponPass.constraints + 'color:red%7&key=AIzaSyAjKzYOB3pXeI79ONHTp066mDb3xzTtUKc'}}">
             </span>
           </p>
-
-          <button *ngIf="couponPass.state" class="btn btn-danger btn-retry mr-2" (click)="retry()"><i class="fas fa-arrow-circle-left"></i> I miei acquisti</button>
-          <button *ngIf="!couponPass.state" class="btn btn-danger btn-retry mr-2" (click)="retryOrder()"><i class="fas fa-arrow-circle-left"></i> I miei ordini</button>
-          <button *ngIf="!couponPass.token.verifier && isValid(couponPass) && couponPass.state" class="btn btn-success btn-retry" (click)="openModal(qrModal)">Ottieni codice</button>
-          <button *ngIf="couponPass.token.verifier || !isValid(couponPass)" class="btn btn-warning btn-retry">Non più valido</button>
+          <div class="package-coupons" *ngIf="couponsPackage !== null">
+                <p><i class="fas fa-fw fa-box-open text-secondary"></i> Coupons inclusi nel pacchetto: <i style="color: #999;">({{getNumberCoupons()}})</i></p>
+                <div *ngFor="let cp of couponsPackage | keyvalue">
+                    <div class="striped d-block d-md-block d-xl-block">
+                        <i class="d-block my-1" style="color: #999; font-size: 15px;">{{cp.value[0].title}} ({{cp.value.length}})</i>
+                        <div class="w-50 d-inline-block">
+                            <img class="img-fluid" src="{{imageURL + cp.value[0].image}}">
+                        </div>
+                        <div class="w-50 d-inline-block">
+                            <img class="img-fluid"
+                                 src="{{'https://maps.googleapis.com/maps/api/staticmap?size=600x300&zoom=18&maptype=roadmap&markers=size:mid%7C' + cp.value[0].constraints + 'color:red%7&key=AIzaSyAjKzYOB3pXeI79ONHTp066mDb3xzTtUKc'}}">
+                            <!--<h5 class="centered-text-image-map" *ngIf="couponsPackage[key].constraints == null"> Mappa assente</h5>-->
+                        </div>
+                    </div>
+                    <!--<hr *ngIf="(i+1) < Object.keys(couponsPackage).length"/>-->
+                </div>
+          </div>
+          <div class="mt-4">
+              <button *ngIf="couponPass.state" class="btn btn-danger btn-retry mr-2" (click)="retry()"><i class="fas fa-arrow-circle-left"></i> I miei acquisti</button>
+              <button *ngIf="!couponPass.state" class="btn btn-danger btn-retry mr-2" (click)="retryOrder()"><i class="fas fa-arrow-circle-left"></i> I miei ordini</button>
+              <button *ngIf="!couponPass.token.verifier && isValid(couponPass) && couponPass.state" class="btn btn-success btn-retry" (click)="openModal(qrModal)">Ottieni codice</button>
+              <button *ngIf="couponPass.token.verifier || !isValid(couponPass)" class="btn btn-warning btn-retry">Non più valido</button>
+          </div>
         </div>
 
       </div>
