--- a/src/app/core/sidebar/sidebar.component.html
+++ b/src/app/core/sidebar/sidebar.component.html
@@ -23,6 +23,10 @@
           <div class="text-center d-inline-block producer-icon"><span class="fas fa-plus-circle icon-dimension"></span></div>
           <span class="menu-collapsed">Aggiungi coupon</span>
         </a>
+        <a [routerLink]="['/reserved-area/producer/offline']" class="list-group-item list-group-item-action gray-sardcoin">
+          <div class="text-center d-inline-block producer-icon"><span class="fas fa-print icon-dimension"></span></div>
+          <span class="menu-collapsed">Vendi offline</span>
+        </a>
         <a [routerLink]="['/reserved-area/producer/report']" class="list-group-item list-group-item-action gray-sardcoin">
           <div class="text-center d-inline-block producer-icon"><span class="fas fa-chart-bar icon-dimension"></span></div>
           <span class="menu-collapsed">Reports</span>
