--- a/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-order/coupon-order.component.html
@@ -36,11 +36,9 @@
                     <h5 class="mb-0">{{formatPrice(coupon.price*coupon.quantity)}}</h5>
 
                     <div class="buttons-bottom ml-auto mt-auto">
-                      <button
-                              class="btn btn-success mr-sm-2 mr-0" (click)="redeem(coupon)">
+                      <button class="btn btn-success mr-sm-2 mr-0" (click)="redeem(coupon)">
                         <i class="fas fa-info-circle mr-1 d-sm-inline d-none"></i>Dettagli
                       </button>
-
                     </div>
                   </div>
                 </div> <!-- Coupons -->
@@ -53,7 +51,5 @@
         </div>
       </div>
     </ng-container>
-    <!--<div class="col-lg-4 position-absolute bg-white" style="height: 400px;">-->
-    <!--</div>-->
   </div>
 </div>
