--- a/src/app/features/reserved-area/consumer/checkout/checkout.component.html
+++ b/src/app/features/reserved-area/consumer/checkout/checkout.component.html
@@ -102,9 +102,13 @@
               <p class=" margin-p"><b>Codice Fiscale: </b>{{user.fiscal_code}}</p>
               <p class=" margin-p"><b>Account Paypal: </b>{{user.email_paypal}}</p>
 
-              <button class="btn btn-lg btn-success float-right ml-2" *ngIf="!(token && !paymentError)" (click)="setCheckout()">
+              <button class="btn btn-lg btn-success float-right ml-2" *ngIf="(totalAmount > 0) && !(token && !paymentError)" (click)="setCheckout()">
                 <i class="fas fa-euro-sign"></i>
                 Conferma e paga
+              </button>
+              <button class="btn btn-lg btn-success float-right ml-2" *ngIf=" (totalAmount === 0) && !(token && !paymentError)" (click)="confirmPayment()">
+                <i class="fas fa-euro-sign"></i>
+                Conferma gratis
               </button>
               <button class="btn btn-lg btn-success float-right ml-2" *ngIf="token && !paymentError"
                       (click)="confirmPayment()">
@@ -156,9 +160,14 @@
               <p class=" margin-p"><b>Nome: </b>{{user.first_name + ' ' + user.last_name}}</p>
               <p class=" margin-p"><b>Codice Fiscale: </b>{{user.fiscal_code}}</p>
               <p class=" margin-p"><b>Account Paypal: </b>{{user.email_paypal}}</p>
-              <button class="btn btn-lg btn-success float-right ml-2" *ngIf="!(token && !paymentError)" (click)="setCheckout()">
+              <button class="btn btn-lg btn-success float-right ml-2" *ngIf=" (totalAmount > 0) && !(token && !paymentError)" (click)="setCheckout()">
                 <i class="fas fa-euro-sign"></i>
                 Conferma e paga
+              </button>
+              </button>
+              <button class="btn btn-lg btn-success float-right ml-2" *ngIf=" (totalAmount === 0) && !(token && !paymentError)" (click)="confirmPayment()">
+                <i class="fas fa-euro-sign"></i>
+                Conferma gratis
               </button>
               <button class="btn btn-lg btn-success float-right ml-2" *ngIf="token && !paymentError"
                       (click)="confirmPayment()">
@@ -202,11 +211,15 @@
               <p class=" margin-p"><b>Nome: </b>{{user.first_name + ' ' + user.last_name}}</p>
               <p class=" margin-p"><b>Codice Fiscale: </b>{{user.fiscal_code}}</p>
               <p class=" margin-p"><b>Account Paypal: </b>{{user.email_paypal}}</p>
-              <button class="btn btn-lg btn-success p-2  float-right ml-2" *ngIf="!(token && !paymentError)" (click)="setCheckout()">
+              <button class="btn btn-lg btn-success p-2  float-right ml-2" *ngIf=" (totalAmount > 0) && !(token && !paymentError)" (click)="setCheckout()">
+              <i class="fas fa-euro-sign"></i>
+              Conferma e paga
+            </button>
+              <button class="btn btn-lg btn-success p-2  float-right ml-2" *ngIf=" (totalAmount === 0) && !(token && !paymentError)" (click)="confirmPayment()">
                 <i class="fas fa-euro-sign"></i>
-                Conferma e paga
+                Conferma gratis
               </button>
-              <button class="btn btn-lg btn-success p-2 float-right ml-2" *ngIf="token && !paymentError"
+              <button class="btn btn-lg btn-success p-2 float-right ml-2" *ngIf=" token && !paymentError"
                       (click)="confirmPayment()">
                 <i class="fas fa-euro-sign"></i>
                 Termina e paga
@@ -251,9 +264,14 @@
               <p class=" margin-p"><b>Nome: </b>{{user.first_name + ' ' + user.last_name}}</p>
               <p class=" margin-p"><b>Codice Fiscale: </b>{{user.fiscal_code}}</p>
               <p class=" margin-p"><b>Account Paypal: </b>{{user.email_paypal}}</p>
-              <button class="btn btn-lg btn-success p-2  float-right ml-2" *ngIf="!(token && !paymentError)" (click)="setCheckout()">
+              <button class="btn btn-lg btn-success p-2  float-right ml-2" *ngIf=" (totalAmount > 0) && !(token && !paymentError)" (click)="setCheckout()">
                 <i class="fas fa-euro-sign"></i>
                 Paga
+              </button>
+              </button>
+              <button class="btn btn-lg btn-success float-right ml-2" *ngIf=" (totalAmount === 0) && !(token && !paymentError)" (click)="confirmPayment()">
+                <i class="fas fa-euro-sign"></i>
+                Prendi
               </button>
               <button class="btn btn-lg btn-success float-right ml-2" *ngIf="token && !paymentError"
                       (click)="confirmPayment()">
