--- a/src/app/features/reserved-area/consumer/checkout/checkout.component.html
+++ b/src/app/features/reserved-area/consumer/checkout/checkout.component.html
@@ -104,15 +104,15 @@
               <p class=" margin-p"><b>Codice Fiscale: </b>{{user.fiscal_code}}</p>
               <p class=" margin-p"><b>Account Paypal: </b>{{user.email_paypal}}</p>
 
-              <button class="btn btn-lg btn-success float-right ml-2" *ngIf="!(token && !paymentError)"
-                      (click)="setCheckout()">
-              <button class="btn btn-lg btn-success float-right ml-2" *ngIf="(totalAmount > 0) && !(token && !paymentError)" (click)="setCheckout()">
+              <button class="btn btn-lg btn-success float-right ml-2"
+                      *ngIf="(totalAmount > 0) && !(token && !paymentError)" (click)="setCheckout()">
                 <i class="fas fa-euro-sign"></i>
                 Conferma e paga
               </button>
-              <button class="btn btn-lg btn-success float-right ml-2" *ngIf=" (totalAmount === 0) && !(token && !paymentError)" (click)="confirmPayment()">
+              <button class="btn btn-lg btn-success float-right ml-2"
+                      *ngIf=" (totalAmount === 0) && !(token && !paymentError)" (click)="confirmPayment()">
                 <i class="fas fa-euro-sign"></i>
-                Conferma gratis
+                Conferma
               </button>
               <button class="btn btn-lg btn-success float-right ml-2" *ngIf="token && !paymentError"
                       (click)="confirmPayment()">
@@ -166,12 +166,14 @@
               <p class=" margin-p"><b>Account Paypal: </b>{{user.email_paypal}}</p>
               <button class="btn btn-lg btn-success float-right ml-2" *ngIf="!(token && !paymentError)"
                       (click)="setCheckout()">
-              <button class="btn btn-lg btn-success float-right ml-2" *ngIf=" (totalAmount > 0) && !(token && !paymentError)" (click)="setCheckout()">
-                <i class="fas fa-euro-sign"></i>
-                Conferma e paga
+                <button class="btn btn-lg btn-success float-right ml-2"
+                        *ngIf=" (totalAmount > 0) && !(token && !paymentError)" (click)="setCheckout()">
+                  <i class="fas fa-euro-sign"></i>
+                  Conferma e paga
+                </button>
               </button>
-              </button>
-              <button class="btn btn-lg btn-success float-right ml-2" *ngIf=" (totalAmount === 0) && !(token && !paymentError)" (click)="confirmPayment()">
+              <button class="btn btn-lg btn-success float-right ml-2"
+                      *ngIf=" (totalAmount === 0) && !(token && !paymentError)" (click)="confirmPayment()">
                 <i class="fas fa-euro-sign"></i>
                 Conferma gratis
               </button>
@@ -221,11 +223,14 @@
                       (click)="setCheckout()">
                 <i class="fas fa-euro-sign"></i>
                 Conferma e paga
-              <button class="btn btn-lg btn-success p-2  float-right ml-2" *ngIf=" (totalAmount > 0) && !(token && !paymentError)" (click)="setCheckout()">
-              <i class="fas fa-euro-sign"></i>
-              Conferma e paga
-            </button>
-              <button class="btn btn-lg btn-success p-2  float-right ml-2" *ngIf=" (totalAmount === 0) && !(token && !paymentError)" (click)="confirmPayment()">
+              </button>
+              <button class="btn btn-lg btn-success p-2  float-right ml-2"
+                      *ngIf=" (totalAmount > 0) && !(token && !paymentError)" (click)="setCheckout()">
+                <i class="fas fa-euro-sign"></i>
+                Conferma e paga
+              </button>
+              <button class="btn btn-lg btn-success p-2  float-right ml-2"
+                      *ngIf=" (totalAmount === 0) && !(token && !paymentError)" (click)="confirmPayment()">
                 <i class="fas fa-euro-sign"></i>
                 Conferma gratis
               </button>
@@ -276,12 +281,14 @@
               <p class=" margin-p"><b>Account Paypal: </b>{{user.email_paypal}}</p>
               <button class="btn btn-lg btn-success p-2  float-right ml-2" *ngIf="!(token && !paymentError)"
                       (click)="setCheckout()">
-              <button class="btn btn-lg btn-success p-2  float-right ml-2" *ngIf=" (totalAmount > 0) && !(token && !paymentError)" (click)="setCheckout()">
-                <i class="fas fa-euro-sign"></i>
-                Paga
+                <button class="btn btn-lg btn-success p-2  float-right ml-2"
+                        *ngIf=" (totalAmount > 0) && !(token && !paymentError)" (click)="setCheckout()">
+                  <i class="fas fa-euro-sign"></i>
+                  Paga
+                </button>
               </button>
-              </button>
-              <button class="btn btn-lg btn-success float-right ml-2" *ngIf=" (totalAmount === 0) && !(token && !paymentError)" (click)="confirmPayment()">
+              <button class="btn btn-lg btn-success float-right ml-2"
+                      *ngIf=" (totalAmount === 0) && !(token && !paymentError)" (click)="confirmPayment()">
                 <i class="fas fa-euro-sign"></i>
                 Prendi
               </button>
