--- a/src/app/features/reserved-area/consumer/producer-info/producer-info.component.html
+++ b/src/app/features/reserved-area/consumer/producer-info/producer-info.component.html
@@ -3,12 +3,13 @@
     <div class="col-lg-6 col-xl-6">
       <div class="card">
         <div class="card-body p-4 b-b-1" style="background:#e0e0e0">
-          <img src="assets/img/avatars/1.jpg" alt="Add new coupon" style="width:50px; float:left; margin-right:30px"/>
+          <div class="float-left mr-3"><i class="far fa-id-card fa-3x"></i></div>
+          <!--<img src="assets/img/avatars/1.jpg" alt="Add new coupon" style="width:50px; float:left; margin-right:30px"/>-->
           <h6 class="display-4" style="float:left; font-size:30pt;">{{producer.company_name}} - {{producer.first_name +
             ' ' + producer.last_name}}</h6>
         </div>
         <div class="p-4">
-          <h4>Address</h4>
+          <h4>Indirizzo</h4>
           <p class="ml-2">
             {{producer.address}}<br/>
             {{producer.zip + ' - ' + producer.city + ' (' + producer.province + ')'}}
