[fix] max quantity

--- a/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
+++ b/src/app/features/reserved-area/producer/coupon-create/coupon-create.component.html
@@ -176,7 +176,7 @@
               <label class="col-sm-4 col-lg-2 col-form-label">Quantità</label>
               <div class="col-sm-12 col-lg-8">
                 <input type="number" formControlName="quantity" class="form-control"
-                       [ngClass]="{ 'is-invalid': submitted && f.quantity.errors }" min="1" max="1"/>
+                       [ngClass]="{ 'is-invalid': submitted && f.quantity.errors }" min="1"/>
                 <div *ngIf="submitted && f.quantity.errors" class="invalid-feedback">
                   <div *ngIf="f.quantity.errors">Valore richiesto o incorretto</div>
                 </div>
