--- a/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-details/coupon-details.component.html
@@ -66,7 +66,7 @@
             Aggiungi al carrello
           </button>
           <button *ngIf="inCart(couponPass.id)" class="btn btn-lg btn-success float-right ml-2" (click)="viewCart()"><i
-            class="fas fa-shopping-cart"></i> Go to cart
+            class="fas fa-shopping-cart"></i> Carrello
           </button>
           <button class="btn btn-lg btn-primary float-right" (click)="retry()">Ritorna allo shopping</button>
         </div>
