[fix] Changed avatar image

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -114,7 +114,7 @@
                data-toggle="dropdown">
               <i *ngIf="isDesktop">Benvenuto, <b>{{username}}</b>!</i>
               <!--<i class="fa fa-2x fa-user-tie"></i>-->
-              <img class="img-avatar mr-0" src="assets/img/avatars/8.jpg" alt="{{username}}">
+              <img class="img-avatar mr-0" src="assets/img/avatars/8.png" alt="{{username}}">
             </a>
             <div id="menu_small" class="dropdown-menu position-menu-small dropdown-menu-right float-right col-2">
               <div class="dropdown-header text-center">
