--- a/src/app/features/reserved-area/broker/package-list/package-list.component.html
+++ b/src/app/features/reserved-area/broker/package-list/package-list.component.html
@@ -1,5 +1,5 @@
 <!-- Table -->
-<div class="container-fluid d-none d-md-block"> <!-- d-none d-md-none d-xl-block"> -->
+<div *ngIf="dataExists()" class="container-fluid d-none d-md-block"> <!-- d-none d-md-none d-xl-block"> -->
   <table [dataSource]="dataSource" class="table-striped w-100 mt-4 mt-md-0" mat-table matSort>
 
     <!-- Title Column -->
@@ -73,7 +73,7 @@
 </div>
 
 <!-- SM CARD -->
-<div class="container-fluid d-block d-md-none mb-5 mt-4">
+<div *ngIf="dataExists()" class="container-fluid d-block d-md-none mb-5 mt-4">
   <div *ngIf="dataSource && dataSource.data && dataSource.data.length > 0">
     <div *ngFor="let coupon of dataSource.data" style="background-color: snow" class="card flex-row flex-wrap">
       <div style="background-color:snow" class="card-header col-4 border-0 pr-0">
@@ -98,6 +98,14 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
+
+<div *ngIf="!dataExists()" class="container-fluid d-none d-md-block">
+  <h2>I miei pacchetti</h2>
+
+  <div class="alert alert-primary text-left p-2" style="max-width: 400px;" role="alert">
+    <h4 class="mb-0">Non hai ancora creato pacchetti.</h4>
   </div>
 </div>
 
