--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought.component.html
@@ -1,5 +1,5 @@
 <h2 class="container-fluid">I miei acquisti</h2>
-<div class="table-responsive d-none d-md-none d-lg-block">
+<div *ngIf="coupons.length > 0" class="table-responsive d-none d-md-none d-lg-block">
   <div class="col-md-12">
     <table class="table table-striped table-borderless">
       <thead class="text-uppercase">
@@ -46,7 +46,7 @@
     </table>
   </div>
 </div> <!-- XL + LG VIEW -->
-<div class="d-none d-md-block d-lg-none">
+<div *ngIf="coupons.length > 0" class="d-none d-md-block d-lg-none">
   <div class="col-md-12">
     <table class="table table-striped table-borderless">
       <thead class="text-uppercase">
@@ -86,7 +86,7 @@
     </table>
   </div>
 </div> <!-- MD VIEW -->
-<div class="d-block d-md-none">
+<div *ngIf="coupons.length > 0" class="d-block d-md-none">
   <div class="col-md-12">
     <table class="table table-striped table-borderless">
       <thead class="text-uppercase">
@@ -121,3 +121,7 @@
     </table>
   </div>
 </div> <!-- SM VIEW -->
+
+<div *ngIf="coupons.length === 0" class="container-fluid alert alert-primary text-left p-2 mx-3" style="max-width: 400px;" role="alert">
+  <h4 class="mb-0">Non hai ancora effettuato acquisti.</h4>
+</div>
