--- a/src/app/features/reserved-area/verifier/verifier.component.html
+++ b/src/app/features/reserved-area/verifier/verifier.component.html
@@ -3,7 +3,7 @@
     <div class="col-xl-7 col-lg-10 col-md-12">
       <div class="col-lg-5 col-md-6 p-3 bg-red-sardcoin"
            style="border-top-left-radius: 0.75rem; border-top-right-radius: 0.75rem">
-        <h4 class="text-white text-center text-uppercase mb-0">Importa coupon</h4>
+        <h4 class="text-white text-center text-uppercase mb-0">Vidima coupon</h4>
       </div>
       <div class="card">
         <div class="card-body px-5 pt-4">
@@ -147,6 +147,7 @@
 <ng-template #verifier>
   <div class="modal-header">
     <h4 class="modal-title pull-left">Vidimare il coupon?</h4>
+
     <button type="button" class="close pull-right" aria-label="Close" (click)="closeModalFalse()">
       <span aria-hidden="true">&times;</span>
     </button>
