--- a/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
+++ b/src/app/features/reserved-area/consumer/coupon-bought/coupon-bought-detail/coupon-bought-detail.component.html
@@ -2,7 +2,7 @@
   <!--<div class="row">-->
   <div class="col-xl-6 col-lg-10 col-md-10 col-sm-12 pl-md-0">
     <div [class]="classMx4" style="padding: 5px">
-      <img class="card-img-top crop centered-and-cropped" src="{{imageURL + couponPass.image}}" alt="Card image cap">
+      <img  class="card-img-top crop centered-and-cropped" src="{{imageURL + couponPass.image}}" alt="Card image cap">
       <div class="card-body p-4">
         <h3 class="card-title mb-0">{{couponPass.title}}</h3>
         <p *ngIf="couponPass.owner">di
@@ -19,10 +19,10 @@
           <i class="fas fa-fw  fa-clock text-secondary"></i> Validità: {{formatUntil(couponPass.valid_until)}}
           <br/>
 
-          <span *ngIf="couponPass.constraints">
+          <span *ngIf="couponPass.constraints && couponPass.type === ITEM_TYPE.COUPON">
               <i class="fas fa-fw fa-map-marker-alt text-secondary"></i> {{couponPass.constraints}}
 
-              <img class="img-fluid d-block mt-3" alt="{{couponPass.constraints}} map"
+              <img   class="img-fluid d-block mt-3" alt="{{couponPass.constraints}} map"
                    src="{{'https://maps.googleapis.com/maps/api/staticmap?size=600x300&zoom=18&maptype=roadmap&markers=size:mid%7C' +
                     couponPass.constraints + 'color:red%7&key=AIzaSyAjKzYOB3pXeI79ONHTp066mDb3xzTtUKc'}}">
             </span>
