--- a/src/app/features/reserved-area/verifier/verifier.component.html
+++ b/src/app/features/reserved-area/verifier/verifier.component.html
@@ -79,7 +79,7 @@
         <div *ngIf="modalCoupons" class="card-header" style="margin-top: 5%; background-color: rgba(184,232,245,0.11)">
           <div class="row col-12 ">
             <div class="row col-10" style="padding-bottom: 10px; padding-left: 5%"><h4 style="padding-top: 1%">
-              Coupons del pacchetto <strong>"{{titlePackage}}"</strong> vidimabili</h4></div>
+              Coupon del pacchetto <strong>"{{titlePackage}}"</strong> vidimabili</h4></div>
             <div class="col-2">
               <button (click)="exitPackage()" type="button" class="btn btn-danger">Chiudi</button>
             </div>
